adding animation to the button and form

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
         <section class="section1">
              <div class="quotes">
                     <h1>Quotes for You</h1>
-                    <p id="quote_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ea animi, accusamus repellat adipisci alias debitis reiciendis voluptas, ut magnam nobis voluptatibus iste maxime cumque sint quasi distinctio accusantium? Facere!</p>
-                    <br>
-                    <span style="z-index:50;font-size:0.9em; font-weight: bold;">
-                     <img src="https://theysaidso.com/branding/theysaidso.png" height="20" width="20" alt="theysaidso.com"/>
-                     <a href="https://theysaidso.com" title="Powered by quotes from theysaidso.com" style="color: #ccc; margin-left: 4px; vertical-align: middle;">
-                       They Said So®
-                     </a>
+                    <p id="quote_text">
+                        This is suppose to be a random quote generator for readers to motivate your reading passion
+                    </p>
+                        <br>
+                    
 </span>
                 </div>  
 
