--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </main>
  
 <footer id="footer">
-    <p class="footer_text">Created by <a href="https://github.com/anyiamvictor"><img src="img/github-mark-white.png" alt="github.png"> anyiamvictor</a> Photo credit by <a href="https://unsplash.com/@itfeelslikefilm">janko-ferlic</a> on unsplash in collaboration with <img src="img/odin.png" alt="TOP.jpg"><a href="https://www.theodinproject.com/">The Odin Project</a> </p>
+    <p class="footer_text">Created by <a href="https://github.com/anyiamvictor"><img src="img/github-mark-white.png" alt="github.png"> anyiamvictor</a> Photo credit by <a href="https://unsplash.com/@itfeelslikefilm">janko-ferlic</a> on unsplash in collaboration with <a href="https://www.theodinproject.com/">The Odin Project</a> </p>
 </footer>
 
 </body>
